Fix overflow when sort menu is opened

--- a/src/App.css
+++ b/src/App.css
@@ -66,404 +66,3 @@ button {
 	outline: none;
 	border: none;
 }
-
-@media (max-width: 500px) {
-	h1 {
-		font-size: 16px;
-	}
-}
-
-/* ACTION BAR */
-.action-bar {
-	display: flex;
-	justify-content: space-between;
-
-	background-color: var(--white);
-	padding: 16px var(--padding-section-laterals);
-	padding-bottom: 0px;
-
-	> form {
-		display: flex;
-		align-items: center;
-		gap: 16px;
-
-		padding: 4px 16px;
-		background-color: var(--white);
-
-		border: 1px solid var(--dark-grey);
-		border-radius: 4px;
-
-		width: 80%;
-		max-width: 600px;
-
-		> i {
-			color: var(--dark-grey);
-		}
-
-		> input {
-			border: none;
-			background-color: var(--white);
-			color: var(--black);
-			font-size: 14px;
-			width: 100%;
-
-			&::placeholder {
-				color: var(--dark-grey);
-			}
-
-			&:focus {
-				outline: none;
-			}
-
-			&::-webkit-search-cancel-button {
-				cursor: pointer;
-			}
-		}
-	}
-
-	#search-not-found {
-		color: red;
-	}
-}
-
-@media (max-width: 500px) {
-	.action-bar {
-		flex-direction: column;
-		gap: 8px;
-		padding: 12px var(--padding-media-small);
-
-		> form {
-			gap: 16px;
-			padding: 8px;
-			width: 100%;
-		}
-	}
-}
-
-.dropdown-container {
-	position: relative;
-
-	> button#sort {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		gap: 32px;
-		padding: 8px 16px;
-
-		background-color: var(--grey);
-		border: 1px solid var(--dark-grey);
-		border-radius: 2px;
-
-		color: var(--light-black);
-		font-weight: 600;
-
-		&:hover,
-		&.selected {
-			background-color: var(--light-black);
-			color: var(--white);
-		}
-
-		> i {
-			font-size: 1rem;
-		}
-	}
-
-	.dropdown-menu {
-		position: absolute;
-		transform-origin: top right;
-		right: 0;
-		width: 250px;
-
-		background-color: var(--white);
-
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: start;
-
-		border: 1px solid var(--dark-grey);
-		border-radius: 2px;
-
-		padding: 8px;
-		margin-top: 8px;
-
-		.item {
-			color: var(--black);
-			width: 100%;
-			padding: 8px 16px;
-			text-align: left;
-			border-radius: 2px;
-			background-color: transparent;
-
-			&:hover {
-				background-color: var(--light-grey);
-			}
-		}
-
-		.selected {
-			background-color: var(--grey);
-			color: var(--black);
-			font-weight: 600;
-		}
-
-		.group-title {
-			font-size: 12px;
-			font-weight: 700;
-			color: var(--light-black);
-		}
-
-		.divider {
-			height: 1px;
-			background-color: var(--grey);
-			width: 100%;
-			margin: 8px 0;
-		}
-	}
-}
-
-@media (max-width: 500px) {
-	.dropdown-container {
-		> button#sort {
-			gap: 8px;
-			padding: 8px;
-			width: 100%;
-			font-weight: 500;
-
-			> i {
-				font-size: 0.75rem;
-			}
-		}
-
-		.dropdown-menu {
-			transform-origin: top left;
-			left: 0;
-			width: 100%;
-		}
-	}
-}
-
-.action-messages {
-	display: flex;
-	justify-content: space-between;
-	padding: 0 var(--padding-section-laterals);
-	height: 50px;
-	background-color: var(--white);
-
-	.search-not-found {
-		color: var(--alert);
-		font-size: 14px;
-		font-weight: 500;
-		width: 100%;
-	}
-
-	.chip-sort {
-		color: var(--black);
-		font-size: 12px;
-		width: 100%;
-		text-align: right;
-
-		display: flex;
-		justify-content: end;
-		align-items: center;
-		gap: 12px;
-		padding-top: 16px;
-
-		.sort-selected {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			gap: 12px;
-
-			background-color: var(--grey);
-			padding: 4px 16px;
-			border: 1px solid var(--dark-grey);
-			border-radius: 50px;
-
-			> i {
-				color: var(--light-black);
-
-				&:hover {
-					color: var(--dark-grey);
-				}
-			}
-		}
-	}
-}
-
-@media (max-width: 500px) {
-	.action-messages {
-		flex-direction: column;
-		padding: 0 var(--padding-media-small);
-		gap: 8px;
-		height: fit-content;
-
-		.search-not-found {
-			font-size: 12px;
-			font-weight: 700;
-		}
-
-		.chip-sort {
-			font-size: 12px;
-			width: 100%;
-
-			justify-content: flex-start;
-			padding-top: 0;
-			margin-bottom: 8px;
-
-			.sort-selected {
-				gap: 12px;
-
-				padding: 4px 12px;
-
-				> i {
-					font-size: 1rem;
-					color: var(--light-black);
-				}
-			}
-		}
-	}
-}
-
-/* RECOMMENDATION SECTION */
-
-/* section.recommendation {
-	--padding-top-bottom: 40px;
-
-	padding: var(--padding-top-bottom) var(--padding-section-laterals);
-	background-color: var(--grey);
-
-	> h2 {
-		font-size: 1.5rem;
-		font-weight: 600;
-		color: var(--accent-purple);
-		margin-bottom: 40px;
-	}
-
-	.recommendation-container {
-		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-		align-items: center;
-		gap: 16px;
-
-		> a {
-			height: 100%;
-
-			.product-card {
-				background-color: var(--light-grey);
-				width: 100%;
-
-				overflow: hidden;
-				display: flex;
-				flex-direction: column;
-				height: 100%;
-
-				border: 1px solid var(--dark-grey);
-				border-radius: 4px;
-
-				&:hover {
-					border: 1px solid var(--black);
-				}
-
-				> img {
-					min-height: 150px;
-					max-height: 250px;
-					height: 100%;
-					object-fit: contain;
-					object-position: center;
-					padding: 32px 64px;
-					background-color: var(--white);
-				}
-
-				.product-info {
-					display: flex;
-					justify-content: space-between;
-
-					flex-direction: column;
-					gap: 16px;
-					background-color: var(--light-grey);
-					padding: 16px;
-
-					.product-info-container {
-						display: flex;
-						flex-direction: column;
-						gap: 12px;
-
-						#name {
-							-webkit-line-clamp: 2;
-							-webkit-box-orient: vertical;
-							overflow: hidden;
-							text-overflow: ellipsis;
-							display: -webkit-box;
-							font-size: 1rem;
-							font-weight: 600;
-							line-height: 130%;
-						}
-
-						.rate-container {
-							display: flex;
-							align-items: center;
-							margin-top: -8px;
-							gap: 8px;
-							font-size: 12px;
-							color: var(--light-black);
-
-							.fa-star {
-								color: var(--yellow-star);
-							}
-						}
-
-						#price {
-							font-size: 14px;
-							font-weight: 600;
-							color: var(--light-black);
-						}
-					}
-				}
-			}
-		}
-	}
-} */
-
-/* @media (max-width: 500px) {
-	section.recommendation {
-		padding: var(--padding-top-bottom) var(--padding-media-small);
-		background-color: var(--white);
-
-		> h2 {
-			font-size: 1.25rem;
-			font-weight: 600;
-			margin-bottom: 16px;
-		}
-
-		.recommendation-container {
-			display: grid;
-			grid-template-columns: repeat(4, 1fr);
-			align-items: center;
-			gap: 8px;
-
-			overflow-x: scroll;
-
-			> a {
-				height: 100%;
-
-				.product-card {
-					background-color: var(--light-grey);
-					min-width: 200px;
-
-					border-radius: 8px;
-
-					&:hover {
-						border: 1px solid var(--black);
-					}
-
-					> img {
-						height: 200px;
-						width: 100%;
-
-						padding: 16px;
-					}
-				}
-			}
-		}
-	}
-} */
